{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 121,
  "lineage": "eb50b5e5-e35b-9c70-972f-e4556844606a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e19c5bc2ae5ff0a6",
            "arn": "arn:aws:ec2:us-east-1:435133245565:elastic-ip/eipalloc-0e19c5bc2ae5ff0a6",
            "domain": "vpc",
            "id": "eipalloc-0e19c5bc2ae5ff0a6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-29-168-119.compute-1.amazonaws.com",
            "public_ip": "100.29.168.119",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": " {var.env_code}-nat-eip- {count.index + 1}"
            },
            "tags_all": {
              "Name": " {var.env_code}-nat-eip- {count.index + 1}"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0ae9d5a04707e35",
            "arn": "arn:aws:ec2:us-east-1:435133245565:elastic-ip/eipalloc-0f0ae9d5a04707e35",
            "domain": "vpc",
            "id": "eipalloc-0f0ae9d5a04707e35",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-29-170-112.compute-1.amazonaws.com",
            "public_ip": "100.29.170.112",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": " {var.env_code}-nat-eip- {count.index + 1}"
            },
            "tags_all": {
              "Name": " {var.env_code}-nat-eip- {count.index + 1}"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062bf86745c7baac4",
            "arn": "arn:aws:ec2:us-east-1:435133245565:elastic-ip/eipalloc-062bf86745c7baac4",
            "domain": "vpc",
            "id": "eipalloc-062bf86745c7baac4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-21-135-100.compute-1.amazonaws.com",
            "public_ip": "23.21.135.100",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": " {var.env_code}-nat-eip- {count.index + 1}"
            },
            "tags_all": {
              "Name": " {var.env_code}-nat-eip- {count.index + 1}"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:435133245565:instance/i-0cfe7c7f16f6b3a64",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfe7c7f16f6b3a64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b879c03e07864d79"
              }
            ],
            "primary_network_interface_id": "eni-0b879c03e07864d79",
            "private_dns": "ip-10-0-0-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.225",
            "public_ip": "44.214.6.164",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b4ee75d2ab95e157",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092762d5e2b48bca2",
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad93323baad4bad7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "i-0cfe7c7f16f6b3a64",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:internet-gateway/igw-0d3c1ca50ee4bfa14",
            "id": "igw-0d3c1ca50ee4bfa14",
            "owner_id": "435133245565",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e19c5bc2ae5ff0a6",
            "association_id": "eipassoc-07f4eeb107c0db12f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01cae9bc7d764a656",
            "network_interface_id": "eni-0033b22b26d71a7c2",
            "private_ip": "10.0.0.35",
            "public_ip": "100.29.168.119",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-092762d5e2b48bca2",
            "tags": {
              "Name": "{var.env_code}-nat- {count.index + 1}"
            },
            "tags_all": {
              "Name": "{var.env_code}-nat- {count.index + 1}"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0ae9d5a04707e35",
            "association_id": "eipassoc-0f291fd5a12bd1df3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0946880fb12b05cfa",
            "network_interface_id": "eni-0d84c44db3ae40b29",
            "private_ip": "10.0.1.154",
            "public_ip": "100.29.170.112",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d393e6fc2ecac68",
            "tags": {
              "Name": "{var.env_code}-nat- {count.index + 1}"
            },
            "tags_all": {
              "Name": "{var.env_code}-nat- {count.index + 1}"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062bf86745c7baac4",
            "association_id": "eipassoc-055397b39376b604e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e2c2f77e0a0390b4",
            "network_interface_id": "eni-0187ad1d9e705bdf2",
            "private_ip": "10.0.2.36",
            "public_ip": "23.21.135.100",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d8d644d3b2b45acc",
            "tags": {
              "Name": "{var.env_code}-nat- {count.index + 1}"
            },
            "tags_all": {
              "Name": "{var.env_code}-nat- {count.index + 1}"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:route-table/rtb-0390cee03aad4c7b1",
            "id": "rtb-0390cee03aad4c7b1",
            "owner_id": "435133245565",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cae9bc7d764a656",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " {var.env_code}-private-rt- {count.index + 1}"
            },
            "tags_all": {
              "Name": " {var.env_code}-private-rt- {count.index + 1}"
            },
            "timeouts": null,
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "rtb-0390cee03aad4c7b1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:route-table/rtb-0591ff72ed8b04d5d",
            "id": "rtb-0591ff72ed8b04d5d",
            "owner_id": "435133245565",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0946880fb12b05cfa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " {var.env_code}-private-rt- {count.index + 1}"
            },
            "tags_all": {
              "Name": " {var.env_code}-private-rt- {count.index + 1}"
            },
            "timeouts": null,
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "rtb-0591ff72ed8b04d5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:route-table/rtb-0e2de744c6aacf15e",
            "id": "rtb-0e2de744c6aacf15e",
            "owner_id": "435133245565",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e2c2f77e0a0390b4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " {var.env_code}-private-rt- {count.index + 1}"
            },
            "tags_all": {
              "Name": " {var.env_code}-private-rt- {count.index + 1}"
            },
            "timeouts": null,
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "rtb-0e2de744c6aacf15e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:route-table/rtb-08c4b83feff4b3810",
            "id": "rtb-08c4b83feff4b3810",
            "owner_id": "435133245565",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3c1ca50ee4bfa14",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "rtb-08c4b83feff4b3810",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3e9748783133a1c",
            "region": "us-east-1",
            "route_table_id": "rtb-0390cee03aad4c7b1",
            "subnet_id": "subnet-01ad81d695c873b22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4fdec17d06e2907",
            "region": "us-east-1",
            "route_table_id": "rtb-0591ff72ed8b04d5d",
            "subnet_id": "subnet-00a8fb25cad0cca54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baadbd06985fb0f6",
            "region": "us-east-1",
            "route_table_id": "rtb-0e2de744c6aacf15e",
            "subnet_id": "subnet-09db62ffb9d1d9794"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0210eeb8207c8c667",
            "region": "us-east-1",
            "route_table_id": "rtb-08c4b83feff4b3810",
            "subnet_id": "subnet-092762d5e2b48bca2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e24297760d51747",
            "region": "us-east-1",
            "route_table_id": "rtb-08c4b83feff4b3810",
            "subnet_id": "subnet-03d393e6fc2ecac68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6abbb6ccd491fe8",
            "region": "us-east-1",
            "route_table_id": "rtb-08c4b83feff4b3810",
            "subnet_id": "subnet-0d8d644d3b2b45acc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:security-group/sg-0ad93323baad4bad7",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad93323baad4bad7",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.210.55.199/32"
                ],
                "description": "SSH from public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-public",
            "name_prefix": "",
            "owner_id": "435133245565",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "sg-0ad93323baad4bad7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:subnet/subnet-01ad81d695c873b22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ad81d695c873b22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435133245565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": " {var.env_code}-private- {count.index + 1}"
            },
            "tags_all": {
              "Name": " {var.env_code}-private- {count.index + 1}"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "subnet-01ad81d695c873b22",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:subnet/subnet-00a8fb25cad0cca54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a8fb25cad0cca54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435133245565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": " {var.env_code}-private- {count.index + 1}"
            },
            "tags_all": {
              "Name": " {var.env_code}-private- {count.index + 1}"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "subnet-00a8fb25cad0cca54",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:subnet/subnet-09db62ffb9d1d9794",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09db62ffb9d1d9794",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435133245565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": " {var.env_code}-private- {count.index + 1}"
            },
            "tags_all": {
              "Name": " {var.env_code}-private- {count.index + 1}"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "subnet-09db62ffb9d1d9794",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:subnet/subnet-092762d5e2b48bca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092762d5e2b48bca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435133245565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "{var.env_code}-public- {count.index + 1}"
            },
            "tags_all": {
              "Name": "{var.env_code}-public- {count.index + 1}"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "subnet-092762d5e2b48bca2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:subnet/subnet-03d393e6fc2ecac68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d393e6fc2ecac68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435133245565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "{var.env_code}-public- {count.index + 1}"
            },
            "tags_all": {
              "Name": "{var.env_code}-public- {count.index + 1}"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "subnet-03d393e6fc2ecac68",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:subnet/subnet-0d8d644d3b2b45acc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8d644d3b2b45acc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435133245565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "{var.env_code}-public- {count.index + 1}"
            },
            "tags_all": {
              "Name": "{var.env_code}-public- {count.index + 1}"
            },
            "vpc_id": "vpc-072385c92ea15b90d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "subnet-0d8d644d3b2b45acc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435133245565:vpc/vpc-072385c92ea15b90d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fff2ce24f97b233e",
            "default_route_table_id": "rtb-0bb30d4f5ec76c352",
            "default_security_group_id": "sg-0139f2e5963dfd0d6",
            "dhcp_options_id": "dopt-097fcc2aa4d22af2e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072385c92ea15b90d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb30d4f5ec76c352",
            "owner_id": "435133245565",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "435133245565",
            "id": "vpc-072385c92ea15b90d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}